[UPD]Vista Inicial y Archivo CSS

--- a/modules/Inicio/templates/Inicio.html.twig
+++ b/modules/Inicio/templates/Inicio.html.twig
@@ -84,7 +84,28 @@
 </div>
 
 <div id="Brindamos">
+
+</div>
+
+<div id="Permisos">
   
+</div>
+
+<div id="Servicios">
+  
+</div>
+
+<div id="Productos">
+  
+</div>
+
+<div id="Plataformas">
+  
+</div>
+
+<div id="Contactos">
+  
+</div>
 </body>
 
 </html>
