[UPD]Se modifican vistas de argos-rastreo

--- a/modules/Inicio/templates/Inicio.html.twig
+++ b/modules/Inicio/templates/Inicio.html.twig
@@ -87,15 +87,15 @@
   <div class="BrindamosFondo">
     <p class="TituloInicial">Brindamos</p>
     <div class="BrindamosContenido">
-      <div class="contenido">
+      <div class="contenidos">
         <p class="BrindamosTitulos">Asistencia y conectividad</p>
         <img src="{{file_url('public://images/icono1.png') }}" width="50%" height="50%" alt="Icono-01">
       </div>
-      <div class="contenido">
+      <div class="contenidos">
         <p class="BrindamosTitulos">Ahorro de Insumos básicos</p>
         <img src="{{file_url('public://images/icono2.png') }}" width="43%" height="43%" alt="Icono-02">
       </div>
-      <div class="contenido">
+      <div class="contenidos">
         <p class="BrindamosTitulos">Seguridad y Confianza</p>
         <img src="{{file_url('public://images/icono3.png') }}" width="45%" height="45%" alt="Icono-03">
       </div>
