--- a/modules/Inicio/css/Inicio.css
+++ b/modules/Inicio/css/Inicio.css
@@ -53,7 +53,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 .contenido{
     text-align: center;
@@ -342,11 +342,15 @@ i{
 
     .BrindamosContenido, .ServiciosContenido{
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         text-align: center;
         justify-content: center;
     }
 
+    .contenidos{
+        flex: 1 1 80px;
+    }
     .maps-move {
         display: flex;
         justify-content: center;
