--- a/modules/Productos/templates/Productos.html.twig
+++ b/modules/Productos/templates/Productos.html.twig
@@ -25,28 +25,28 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">HOME</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">BRINDAMOS</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Brindamos">BRINDAMOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">PERMISOS</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Permisos">PERMISOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">SERVICIOS</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Servicios">SERVICIOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">PRODUCTOS</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Productos">PRODUCTOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">PLATAFORMAS</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Plataformas">PLATAFORMAS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">CONTACTO</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio#Conntacto">CONTACTO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link small-text" href="#">BOLSA DE TRABAJO</a>
+          <a class="nav-link small-text" href="/argos-rastreo/inicio">BOLSA DE TRABAJO</a>
         </li>
       </ul>
     </div>
